--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <script src="js/ruppert.js"></script>
 </head>
 <body>
+  <img id="img" src="data/me.jpg" width="400"></img><br/>
   <canvas id="canvas" width="800px" height="600px"></canvas>
   <button id="show-steps-button">Show steps</button>
 </body>
