using three.js for plane calc

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <head>
   <title>Triangulations - Ruppert Test</title>
-  <script src="lib/jquery-1.11.2.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/95/three.js"></script>
+<!-- <script src="lib/jquery-1.11.2.min.js"></script> -->
   <script src="lib/jcanvas.min.js"></script>
   <script src="lib/queue.min.js"></script>
   <script src="tri/geometry.js"></script>
@@ -11,7 +13,7 @@
   <script src="js/ruppert.js"></script>
 </head>
 <body>
+  <button id="show-steps-button">Show steps</button><br/>
   <img id="img" src="data/me.jpg" width="400"></img><br/>
   <canvas id="canvas" width="800px" height="600px"></canvas>
-  <button id="show-steps-button">Show steps</button>
 </body>
