--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
   <button id="show-steps-button">Show steps</button><br/>
+  <!-- <img id="img" src="data/sun.jpg" width="400"></img><br/> -->
   <img id="img" src="data/me.jpg" width="400"></img><br/>
   <canvas id="canvas" width="800px" height="600px"></canvas>
 </body>
