using chrome logo to validate directions

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
   <script src="js/ruppert.js"></script>
 </head>
 <body>
-  <button id="show-steps-button">Show steps</button><br/>
-  <!-- <img id="img" src="data/sun.jpg" width="400"></img><br/> -->
-  <img id="img" src="data/me.jpg" width="400"></img><br/>
+  <button id="show-steps-button" style="vertical-align: top;">Show steps</button>
+  <!-- <img id="img" src="data/sun.jpg" width="400" style="vertical-align: top;"></img> -->
+  <!-- <img id="img" src="data/me.jpg" width="400" style="vertical-align: top;"></img> -->
+  <img id="img" src="data/chrome-logo.jpg" width="400" style="vertical-align: top;"></img>
   <canvas id="canvas" width="800px" height="600px"></canvas>
 </body>
