--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <body>
   <button id="show-steps-button" style="vertical-align: top;">Show steps</button>
   <!-- <img id="img" src="data/sun.jpg" width="400" style="vertical-align: top;"></img> -->
-  <!-- <img id="img" src="data/me.jpg" width="400" style="vertical-align: top;"></img> -->
+  <!-- <img id="img" src="data/me.jpg" width="600" style="vertical-align: top;"></img> -->
+  <!-- <img id="img" src="data/iceland.jpg" width="400" style="vertical-align: top;"></img> -->
+  <!-- <img id="img" src="data/me2.jpg" width="400" style="vertical-align: top;"></img> -->
   <img id="img" src="data/chrome-logo.jpg" width="400" style="vertical-align: top;"></img>
   <canvas id="canvas" width="800px" height="600px"></canvas>
 </body>
