--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <!-- <img id="img" src="data/me.jpg" width="600" style="vertical-align: top;"></img> -->
   <!-- <img id="img" src="data/iceland.jpg" width="400" style="vertical-align: top;"></img> -->
   <!-- <img id="img" src="data/me2.jpg" width="400" style="vertical-align: top;"></img> -->
-  <img id="img" src="data/chrome-logo.jpg" width="400" style="vertical-align: top;"></img>
+  <!-- <img id="img" src="data/chrome-logo.jpg" width="400" style="vertical-align: top;"></img> -->
+  <img id="img" src="data/LadyGagaVector.jpg" width="400" style="vertical-align: top;"></img>
   <canvas id="canvas" width="800px" height="600px"></canvas>
 </body>
