--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="tri/geometry.js"></script>
   <script src="tri/graph.js"></script>
   <script src="tri/triangulate.js"></script>
-  <script src="data/key.js"></script>
+  <!-- <script src="data/key.js"></script> -->
   <script src="js/ruppert.js"></script>
 </head>
 <body>
