--- a/index.html
+++ b/index.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
+
 <head>
   <title>Triangulations - Ruppert Test</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/95/three.js"></script>
-<!-- <script src="lib/jquery-1.11.2.min.js"></script> -->
+  <!-- <script src="lib/jquery-1.11.2.min.js"></script> -->
   <script src="lib/jcanvas.min.js"></script>
   <script src="lib/queue.min.js"></script>
   <script src="tri/geometry.js"></script>
   <script src="tri/graph.js"></script>
   <script src="tri/triangulate.js"></script>
   <!-- <script src="data/key.js"></script> -->
+  <script src="lib/sobel.js"></script>
   <script src="js/ruppert.js"></script>
 </head>
-<body>
-  <button id="show-steps-button" style="vertical-align: top;">Show steps</button>
+
+<body onload="work()">
+  <div style="vertical-align: top;">
+    <!-- <button id="work" onclick="work()">Work</button> -->
+    <!-- <br/> -->
+    <button id="show-steps-button">Show steps</button>
+  </div>
   <!-- <img id="img" src="data/sun.jpg" width="400" style="vertical-align: top;"></img> -->
   <!-- <img id="img" src="data/me.jpg" width="600" style="vertical-align: top;"></img> -->
-  <!-- <img id="img" src="data/iceland.jpg" width="400" style="vertical-align: top;"></img> -->
+  <img id="img" src="data/iceland.jpg" width="400" style="vertical-align: top;"></img>
   <!-- <img id="img" src="data/me2.jpg" width="400" style="vertical-align: top;"></img> -->
   <!-- <img id="img" src="data/chrome-logo.jpg" width="400" style="vertical-align: top;"></img> -->
-  <img id="img" src="data/LadyGagaVector.jpg" width="400" style="vertical-align: top;"></img>
+  <!-- <img id="img" src="data/LadyGagaVector.jpg" width="400" style="vertical-align: top;"></img> -->
   <canvas id="canvas" width="800px" height="600px"></canvas>
 </body>
