remove show steps button

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 </head>
 
 <body onload="work()">
-  <div style="vertical-align: top;">
+  <!-- <div style="vertical-align: top;"> -->
     <!-- <button id="work" onclick="work()">Work</button> -->
     <!-- <br/> -->
-    <button id="show-steps-button">Show steps</button>
-  </div>
+    <!-- <button id="show-steps-button">Show steps</button> -->
+  <!-- </div> -->
   <!-- <img id="img" src="data/sun.jpg" width="400" style="vertical-align: top;"></img> -->
   <!-- <img id="img" src="data/me.jpg" width="600" style="vertical-align: top;"></img> -->
   <img id="img" src="data/iceland.jpg" width="400" style="vertical-align: top;"></img>
