--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
   <script src="js/ruppert.js"></script>
 </head>
 
-<body onload="work()">
+<body>
   <!-- <div style="vertical-align: top;"> -->
-    <!-- <button id="work" onclick="work()">Work</button> -->
+  <input type="file" name="Load"></input><br/>
+    <button id="work" onclick="work()">Work</button><br/>
     <!-- <br/> -->
     <!-- <button id="show-steps-button">Show steps</button> -->
   <!-- </div> -->
