--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
   <!-- <script src="data/key.js"></script> -->
   <script src="lib/sobel.js"></script>
   <script src="js/ruppert.js"></script>
+  <script src="js/loadimage.js"></script>
 </head>
 
 <body>
   <!-- <div style="vertical-align: top;"> -->
-  <input type="file" name="Load"></input><br/>
-    <button id="work" onclick="work()">Work</button><br/>
-    <!-- <br/> -->
-    <!-- <button id="show-steps-button">Show steps</button> -->
+  <input type="file" name="Load" id="loadImage"></input>
+  <br/>
+  <button id="work" onclick="work()">Work</button>
+  <br/>
+  <!-- <br/> -->
+  <!-- <button id="show-steps-button">Show steps</button> -->
   <!-- </div> -->
   <!-- <img id="img" src="data/sun.jpg" width="400" style="vertical-align: top;"></img> -->
   <!-- <img id="img" src="data/me.jpg" width="600" style="vertical-align: top;"></img> -->
