display on going changes to the triangulation

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <input type="number" id="chosenHeight" value="600" disabled></input>
   <br/>
   <button id="work" onclick="work()">Work</button>
+  <label id="log"></label>
   <br/>
   <!-- <img id="img" src="data/sun.jpg" width="400" style="vertical-align: top;"></img> -->
   <!-- <img id="img" src="data/me.jpg" width="600" style="vertical-align: top;"></img> -->
