--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
   <input type="number" id="chosenHeight" value="600" disabled></input>
   <br/>
   <button id="work" onclick="work()">Work</button>
-  <label id="log"></label>
+  <button id="stop" onclick="stop()">Stop</button>
   <br/>
+  <div id="log" style="font-size: small"></div>
   <!-- <img id="img" src="data/sun.jpg" width="400" style="vertical-align: top;"></img> -->
   <!-- <img id="img" src="data/me.jpg" width="600" style="vertical-align: top;"></img> -->
   <img id="img" src="data/iceland.jpg" width="400" style="vertical-align: top;"></img>
