log as text area

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
   <button id="work" onclick="work()">Work</button>
   <button id="stop" onclick="stop()">Stop</button>
   <br/>
-  <div id="log" style="font-size: small"></div>
+  <textarea id="log" style="font-size: small; width: 400px; height: 50px; border-width:0px; "></textarea>
+  <br/>
   <!-- <img id="img" src="data/sun.jpg" width="400" style="vertical-align: top;"></img> -->
   <!-- <img id="img" src="data/me.jpg" width="600" style="vertical-align: top;"></img> -->
   <img id="img" src="data/iceland.jpg" width="400" style="vertical-align: top;"></img>
