--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <!-- <div style="vertical-align: top;"> -->
+  <div align="center">
   Load Image:
   <input type="file" name="Load" id="loadImage"></input>
   <br/> Image width:
@@ -35,5 +35,6 @@
   <!-- <img id="img" src="data/me2.jpg" width="400" style="vertical-align: top;"></img> -->
   <!-- <img id="img" src="data/chrome-logo.jpg" width="400" style="vertical-align: top;"></img> -->
   <!-- <img id="img" src="data/LadyGagaVector.jpg" width="400" style="vertical-align: top;"></img> -->
-  <canvas id="canvas" width="800px" height="600px"></canvas>
+  <canvas id="canvas" width="400px" height="600px"></canvas>
+  </div>
 </body>
