--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
 
 <body>
   <div align="center">
-  Load Image:
-  <input type="file" name="Load" id="loadImage"></input>
-  <br/> Image width:
-  <input type="range" name="Width" id="widthImage" min="20" max="1500" value="400"></input>
-  <input type="number" id="chosenWidth" value="400" disabled></input>
-  x
-  <input type="number" id="chosenHeight" value="600" disabled></input>
-  <br/>
-  <button id="work" onclick="work()">Work</button>
-  <button id="stop" onclick="stop()">Stop</button>
-  <br/>
-  <textarea id="log" style="font-size: small; width: 400px; height: 50px; border-width:0px; "></textarea>
-  <br/>
-  <!-- <img id="img" src="data/sun.jpg" width="400" style="vertical-align: top;"></img> -->
-  <!-- <img id="img" src="data/me.jpg" width="600" style="vertical-align: top;"></img> -->
-  <img id="img" src="data/iceland.jpg" width="400" style="vertical-align: top;"></img>
-  <!-- <img id="img" src="data/me2.jpg" width="400" style="vertical-align: top;"></img> -->
-  <!-- <img id="img" src="data/chrome-logo.jpg" width="400" style="vertical-align: top;"></img> -->
-  <!-- <img id="img" src="data/LadyGagaVector.jpg" width="400" style="vertical-align: top;"></img> -->
-  <canvas id="canvas" width="400px" height="600px"></canvas>
+    Load Image:
+    <input type="file" name="Load" id="loadImage"></input>
+    <br/> Image width:
+    <input type="range" name="Width" id="widthImage" min="20" max="1500" value="400"></input>
+    <input type="number" id="chosenWidth" value="400" disabled></input>
+    x
+    <input type="number" id="chosenHeight" value="600" disabled></input>
+    <br/>
+    <button id="work" onclick="work()">Work</button>
+    <button id="stop" onclick="stop()">Stop</button>
+    <br/>
+    <textarea id="log" style="font-size: small; width: 400px; height: 50px; border-width:0px; "></textarea>
+    <br/>
+    <!-- <img id="img" src="data/sun.jpg" width="400" style="vertical-align: top;"></img> -->
+    <!-- <img id="img" src="data/me.jpg" width="600" style="vertical-align: top;"></img> -->
+    <img id="img" src="data/iceland.jpg" width="400" style="vertical-align: top; border:1px solid #000000;"></img>
+    <!-- <img id="img" src="data/me2.jpg" width="400" style="vertical-align: top;"></img> -->
+    <!-- <img id="img" src="data/chrome-logo.jpg" width="400" style="vertical-align: top;"></img> -->
+    <!-- <img id="img" src="data/LadyGagaVector.jpg" width="400" style="vertical-align: top;"></img> -->
+    <canvas id="canvas" width="400px" height="600px" style="border:1px solid #000000;"></canvas>
   </div>
 </body>
