--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <style>
     @font-face {
       font-family: 'Patua One';
-      src: url('/lib/PatuaOne-Regular.ttf');
+      src: url('lib/PatuaOne-Regular.ttf');
     }
   </style>
 </head>
