--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <br/>
     <!-- <img id="img" src="data/sun.jpg" width="400" style="vertical-align: top;"></img> -->
     <!-- <img id="img" src="data/me.jpg" width="600" style="vertical-align: top;"></img> -->
-    <img id="img" src="data/iceland.jpg" width="300" style="vertical-align: top; border:1px solid #000000;"></img>
+    <img id="img" src="data/iceland.jpg" width="300" style="vertical-align: top; border:1px solid #000000;" onload="fixSizesByImage()"></img>
     <!-- <img id="img" src="data/me2.jpg" width="400" style="vertical-align: top;"></img> -->
     <!-- <img id="img" src="data/chrome-logo.jpg" width="400" style="vertical-align: top;"></img> -->
     <!-- <img id="img" src="data/LadyGagaVector.jpg" width="400" style="vertical-align: top;"></img> -->
