fast color changes

--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
   </div>
   <div style="position: absolute; right: 10px; top: 10px; ">
     <input type='text' id="flat" />
-    <script>$("#flat").spectrum({ flat: true, showButtons: false, move: function(c) { color = c.toHexString()} });</script>
+    <script>$("#flat").spectrum({ flat: true, showButtons: false, move: function(c) { repaint(c.toHexString())} });</script>
   </div>
 </body>
