--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <input type='radio' name='graph-style' value='random' onchange="repaint()" />Random color<br/>
     <input type='radio' name='graph-style' value='edges' onchange="repaint()" />Edges in color<br/>
     <input type='text' id="flat" />
-    <script>$("#flat").spectrum({ flat: true, showButtons: false, move: function (c) { repaint(c.toHexString()) } });</script>
+    <script>$("#flat").spectrum({ flat: true, showButtons: false, move: function (c) { repaint(c.toHexString()) } }); setTimeout(repaint, 10);</script>
   </div>
   <!-- images:  data/sun.jpg data/me.jpg data/me2.jpg data/chrome-logo.jpg data/LadyGagaVector.jpg -->
 </body>
