--- a/index.html
+++ b/index.html
@@ -26,22 +26,29 @@
   <div align="center">
     <h1 style="font-family: 'Patua One'; font-size: 50px; text-shadow: 0px 3px rgba(0, 0, 0, 0.5);
     font-weight: bold; margin-bottom: 0px; margin-top: 0px;">Image Triangulation</h1>
-    <textarea id="log" style="font-size: small; width: 400px; height: 50px; border-width:0px; "></textarea>
+    <textarea id="log" style="font-size: small; width: 400px; height: 30px; border-width:1px; "></textarea>
     <br/>
     <button id="work" onclick="work()">Work</button>
     <button id="stop" onclick="stop()">Stop</button>
-    <br/>
-    <input type="file" name="Load" id="loadImage" />
     <br/> Image width:
     <input type="range" name="Width" id="widthImage" min="20" max="1500" value="400" />
     <input type="number" id="chosenWidth" value="400" disabled/> x
     <input type="number" id="chosenHeight" value="600" disabled/>
+    <br/>
+    <input type="file" name="Load" id="loadImage" />
     <br/>
     <img id="img" src="data/iceland.jpg" width="300" style="vertical-align: top; border:1px solid #000000;" onload="fixSizesByImage()"></img>
     <canvas id="canvas" width="300px" height="600px" style="border:1px solid #000000;"></canvas>
     <br/> Fork from: <a href="https://github.com/mkacz91/Triangulations">mkacz91</a>
   </div>
   <div style="position: absolute; right: 10px; top: 10px; ">
+    <h3>Advanced:</h3>
+    Initial edge detection sensitivity:<br/>
+    <input type="range" name="Sensitivity" id="Sensitivity" min="200" max="255" value="240">
+    <input type="number" id="chosenSensitivity" value="240" disabled/>
+    <br/> Triangulation steiner iterations:<br/>
+    <input type="range" name="Iterations" id="Iterations" min="5000" max="50000" value="30000" />
+    <input type="number" id="chosenIterations" value="30000" disabled/><br/>
     <h3>Graph style:</h3>
     <input type='radio' name='graph-style' value='midcolor' onchange="repaint()" checked="true" />Mid color<br/>
     <input type='radio' name='graph-style' value='random' onchange="repaint()" />Random color<br/>
