--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <input type="number" id="chosenWidth" value="400" disabled/> x
     <input type="number" id="chosenHeight" value="600" disabled/>
     <br/>
-    <input type="file" name="Load" id="loadImage" />
+    <label style="font-size: small">Drop image or </label><input type="file" name="Load" id="loadImage" />
     <br/>
     <img id="img" src="data/iceland.jpg" width="300" style="vertical-align: top; border:1px solid #000000;" onload="fixSizesByImage()"></img>
     <canvas id="canvas" width="300px" height="600px" style="border:1px solid #000000;"></canvas>
