--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
     <br/>
     <img id="img" src="data/iceland.jpg" width="300" style="vertical-align: top; border:1px solid #000000;" onload="fixSizesByImage()"></img>
     <canvas id="canvas" width="300px" height="600px" style="border:1px solid #000000;"></canvas>
-    <br/> Fork from: <a href="https://github.com/mkacz91/Triangulations">mkacz91</a>
+    <br/><a href="https://github.com/erasta/ImageTriangulation">View my code</a>
+    <br/><a href="https://github.com/mkacz91/Triangulations">(forked from)</a>
+    <br/>
   </div>
+  <img id="img4canvas" src="out/iceland2.png" width="300" style="position: absolute; top: 0px; visibility: hidden"></img>
   <div style="position: absolute; right: 10px; top: 10px; ">
     <h3>Advanced:</h3>
     Initial edge detection sensitivity:<br/>
