--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/95/three.js"></script>
   <script src='lib/spectrum.js'></script>
   <link rel='stylesheet' href='lib/spectrum.css' />
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123138137-4"></script>
+  <script> window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'UA-123138137-4');</script>
+
   <script src="lib/jcanvas.min.js"></script>
   <script src="lib/queue.min.js"></script>
   <script src="tri/geometry.js"></script>
