download color ply

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <td>
           <a id="download" download="triangulation.png"><button type="button" onClick="downloadImage()">Download image</button></a>
           <button type="button" onClick="downloadObj()">Download OBJ</button>
+          <button type="button" onClick="downloadPly()">Download colored PLY</button>
         </td>
       </tr>
       <tr>
