--- a/index.html
+++ b/index.html
@@ -30,16 +30,17 @@
 <body>
   <div align="center">
     <h1 style="font-family: 'Patua One'; font-size: 50px; text-shadow: 0px 3px rgba(0, 0, 0, 0.5);
-    font-weight: bold; margin-bottom: 0px; margin-top: 0px;">Image Triangulation</h1>
+    font-weight: bold; margin-bottom: 0px; margin-top: 0px;">Image
+      Triangulation</h1>
     <textarea id="log" style="font-size: small; width: 400px; height: 30px; border-width:1px; "></textarea>
-    <br/>
+    <br />
     <button id="work" onclick="work()">Work</button>
     <button id="stop" onclick="stop()">Stop</button>
-    <br/> Image width:
+    <br /> Image width:
     <input type="range" name="Width" id="widthImage" min="20" max="1500" value="400" />
-    <input type="number" id="chosenWidth" value="400" disabled/> x
-    <input type="number" id="chosenHeight" value="600" disabled/>
-    <br/>
+    <input type="number" id="chosenWidth" value="400" disabled /> x
+    <input type="number" id="chosenHeight" value="600" disabled />
+    <br />
     <table>
       <tr>
         <td>
@@ -53,31 +54,35 @@
       </tr>
       <tr>
         <td>
-          <img id="img" src="data/iceland.jpg" width="300" style="vertical-align: top; border:1px solid #000000;" onload="fixSizesByImage()"/>
+          <img id="img" src="data/iceland.jpg" width="300" style="vertical-align: top; border:1px solid #000000;"
+            onload="fixSizesByImage()" />
         </td>
         <td>
           <canvas id="canvas" width="300px" height="600px" style="border:1px solid #000000;"></canvas>
         </td>
       </tr>
     </table>
-    <br/>View <a href="https://github.com/erasta">my</a> code on <a href="https://github.com/erasta/ImageTriangulation">GitHub</a>
-    <br/>Assisted by <a href="https://github.com/adishavit">Adi Shavit</a>
-    <br/>(Forked from <a href="https://github.com/mkacz91/Triangulations">mkacz91</a>)
-    <br/>
+    <br />View <a href="https://github.com/erasta">my</a> code on <a href="https://github.com/erasta/ImageTriangulation">GitHub</a>
+    <br />Assisted by <a href="https://github.com/adishavit">Adi Shavit</a>
+    <br />(Forked from <a href="https://github.com/mkacz91/Triangulations">mkacz91</a>)
+    <br />
   </div>
-  <img id="img4canvas" src="out/iceland2.png" width="300" style="position: absolute; top: 0px; visibility: hidden"/>
+  <img id="img4canvas" src="out/iceland2.png" width="300" style="position: absolute; top: 0px; visibility: hidden" />
   <div style="position: absolute; right: 10px; top: 10px; ">
     <h3>Advanced:</h3>
-    Initial edge detection sensitivity:<br/>
+    Edge detection sensitivity:<br />
     <input type="range" name="Sensitivity" id="Sensitivity" min="200" max="255" value="240">
-    <input type="number" id="chosenSensitivity" value="240" disabled/>
-    <br/> Triangulation steiner iterations:<br/>
+    <input type="number" id="chosenSensitivity" value="240" disabled />
+    <br />Triangle relaxation sensitivity:<br />
+    <input type="range" name="TrigSensitivity" id="TrigSensitivity" min="0.1" max="100" value="10">
+    <input type="number" id="chosenTrigSensitivity" value="10" disabled />
+    <br /> Triangulation steiner iterations:<br />
     <input type="range" name="Iterations" id="Iterations" min="5000" max="50000" value="30000" />
-    <input type="number" id="chosenIterations" value="30000" disabled/><br/>
+    <input type="number" id="chosenIterations" value="30000" disabled /><br />
     <h3>Graph style:</h3>
-    <input type='radio' name='graph-style' value='midcolor' onchange="repaint()" checked="true" />Mid color<br/>
-    <input type='radio' name='graph-style' value='random' onchange="repaint()" />Random color<br/>
-    <input type='radio' name='graph-style' value='edges' onchange="repaint()" />Edges in color<br/>
+    <input type='radio' name='graph-style' value='midcolor' onchange="repaint()" checked="true" />Mid color<br />
+    <input type='radio' name='graph-style' value='random' onchange="repaint()" />Random color<br />
+    <input type='radio' name='graph-style' value='edges' onchange="repaint()" />Edges in color<br />
     <input type='text' id="flat" />
     <script>$("#flat").spectrum({ flat: true, showButtons: false, move: function (c) { repaint(c.toHexString()) } }); setTimeout(repaint, 10);</script>
   </div>
