--- a/index.html
+++ b/index.html
@@ -62,10 +62,12 @@
         </td>
       </tr>
     </table>
-    <br />View <a href="https://github.com/erasta">my</a> code on <a href="https://github.com/erasta/ImageTriangulation">GitHub</a>
-    <br />Assisted by <a href="https://github.com/adishavit">Adi Shavit</a>
-    <br />(Forked from <a href="https://github.com/mkacz91/Triangulations">mkacz91</a>)
-    <br />
+    <div style="position: absolute; text-align: center; bottom: 10px; width: 100%;">
+        Created by <a href="https://github.com/erasta">Eran</a>
+        and assisted by <a href="https://github.com/adishavit">Adi Shavit</a>,
+        view code on <a href="https://github.com/erasta/ImageTriangulation">GitHub</a>
+        (Forked from <a href="https://github.com/mkacz91/Triangulations">mkacz91</a>)
+    </div>
   </div>
   <img id="img4canvas" src="out/iceland2.png" width="300" style="position: absolute; top: 0px; visibility: hidden" />
   <div style="position: absolute; right: 10px; top: 10px; ">
